Mecanismo de criação e visualização de flashcards e grupos de flashcard

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
+        <script src="{% static 'global/js/script.js' %}" defer></script>
     </head>
 
     <body>
